2009-01-28  Scott James Remnant  <scott@netsplit.com>

	* init/parse_job.c (parse_job): Update documentation to match
	new nih_alloc()
	(parse_process, parse_on_operator, stanza_start, stanza_stop)
	(stanza_expect, stanza_kill, stanza_respawn, stanza_normal)
	(stanza_session, stanza_console, stanza_nice, stanza_umask)
	(stanza_oom, stanza_limit): Use nih_local for all the temporary
	arguments where we can.

	* init/parse_job.c (parse_on_operand, stanza_env, stanza_export)
	(stanza_emits): Make temporary string variables use nih_local,
	this gives us a massive code clean-up and makes nih_str_array_addp
	safe to take a reference.

	* init/job_process.c (job_process_run): Make argv, env, script and
	cmd all use nih_local, this cleans up the code a little and makes
	nih_str_array_addp safe to take a reference.

	* init/environ.c: Update documentation to match new nih_alloc()

	* init/tests/test_job_process.c (test_run): Check that trailing
	newlines are ignored when running a script (can verify r1025 is
	fixed with gdb)

	* init/tests/test_environ.c (test_expand): Add a test case for the
	bug fixed in r1027, the implicit case of the gap in the environment
	string being the same size as the value replacing it.

	* init/environ.c (environ_add): Use nih_local for new_str, making
	the code paths a little simpler and ensuring we pass something that
	can be referenced to nih_str_array_addp()

	* init/tests/test_event.c (test_new): Make sure that env is an
	orphan with TEST_ALLOC_ORPHAN.
	* init/tests/test_event_operator.c (test_operator_new): Make sure
	that env is an orphan with TEST_ALLOC_ORPHAN.
	(test_operator_copy): Drop pointless NULL parent check.

	* init/tests/test_control.c: Include limits.h

	* init/blocked.c (blocked_new): Take a reference to the message,
	otherwise it will be freed; we free the Blocked structure when we're
	done, so will automatically unref the message.
	* init/tests/test_blocked.c (test_new): Add tests to make sure the
	reference is taken.